# PlaudNotes

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  RAILWAY_TEMPLATE.md  README.md  SECURITY_SETUP.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml
article/: medium-draft.md
src/plaud_notes_mcp/: __init__.py  plaud_client.py  server.py
