[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaud-notes-mcp"
version = "0.1.0"
description = "MCP server to connect Plaud Notes to Claude for context and historical reference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
plaud-notes-mcp = "plaud_notes_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
